force-app/main/default/objects/HelloSign__HelloSign_Signature_Request__c/HelloSign__HelloSign_Signature_Request__c.object-meta.xml
<CustomObject>
    <description>Custom object for Dropbox Sign signature request records</description>
    <label>Dropbox Sign Signature Request</label>
    <nameField>
        <displayFormat>HELLO-{000000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dropbox Sign Signature Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>