force-app/main/default/objects/HelloSign__HelloSign_Signature_Request__c/fields/HelloSign__Account__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>String field on the signature request record that stores the account name of the agreement sent from Account object</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>HelloSign_Document_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>