force-app/main/default/objects/HelloSign__HelloSign_Signature_Request__c/fields/HelloSign__Active__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox field on the signature request record</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>