force-app/main/default/objects/HelloSign__HelloSign_Signature_Request__c/fields/HelloSign__Completed_File_URL__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Completed_File_URL__c</fullName>
    <description>URL field on the signature request record stores the URL for the completed, signed signature request file</description>
    <label>Completed File URL</label>
    <type>Url</type>
</CustomField>