force-app/main/default/objects/HelloSign__HelloSign_Signature_Request__c/fields/HelloSign__Completed_Signers__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Completed_Signers__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number field on the signature request record. Stores the number of signer roles that have completed their signature event</description>
    <label>Completed Signers</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>