force-app/main/default/objects/HelloSign__HelloSign_Signature_Request__c/fields/HelloSign__Contact__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>String field on the signature request record. Stores the Contact name of the agreement sent from Contact object</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>HelloSign_Document_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>