force-app/main/default/objects/HelloSign__HelloSign_Signature_Request__c/fields/HelloSign__Declined_Reason__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Declined_Reason__c</fullName>
    <description>String field on the signature request record. Upon completion of &quot;decline to sign&quot; at the same time the latest action becomes &quot;declined&quot;</description>
    <label>Declined Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>