force-app/main/default/objects/HelloSign__HelloSign_Signature_Request__c/fields/HelloSign__Document_Name__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Document_Name__c</fullName>
    <description>String field on the signature request record</description>
    <label>Document Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>