force-app/main/default/objects/HelloSign__HelloSign_Signature_Request__c/fields/HelloSign__Document_Type__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Document_Type__c</fullName>
    <description>String field on the signature request record. Stores the document Type (Notes &amp; Attachments / Files)</description>
    <label>Document Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>