force-app/main/default/objects/HelloSign__HelloSign_Signature_Request__c/fields/HelloSign__last_reminder_sent__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__last_reminder_sent__c</fullName>
    <description>Datetime field on the signature request record</description>
    <label>Last Reminder Sent</label>
    <type>DateTime</type>
</CustomField>