force-app/main/default/objects/HelloSign__HelloSign_Signature_Request__c/fields/HelloSign__Latest_Action__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Latest_Action__c</fullName>
    <description>Dropdown option on the signature request object. Values:
Signature Completed: When all signers have completed their signing actions (total signers = completed signers)
Awaiting Signature: Signature events have not been completed by 1 or more signer roles in the signature process
Declined: Signature event has been declined by a party
Cancelled: Signature event was cancelled by sender</description>
    <label>Latest Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Signature</fullName>
            </value>
            <value>
                <fullName>Signature Completed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Reassigned</fullName>
                <isActive>false</isActive>
                <label>Reassigned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>