force-app/main/default/objects/HelloSign__HelloSign_Signature_Request__c/fields/HelloSign__Lead__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>String field on the signature request record. Stores the Lead name of the agreement sent from Lead object</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>HelloSign_Document_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>