force-app/main/default/objects/HelloSign__HelloSign_Signature_Request__c/fields/HelloSign__Message2__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Message2__c</fullName>
    <description>String field on the signature request record. Stores the default message used when sending requests for signature.</description>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>