force-app/main/default/objects/HelloSign__HelloSign_Signature_Request__c/fields/HelloSign__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>String field on the signature request record. Stores the Opportunity name of the agreement sent from Opportunity object</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>HelloSign_Document_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>