force-app/main/default/objects/HelloSign__HelloSign_Signature_Request__c/fields/HelloSign__Related_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Related_Object_Id__c</fullName>
    <description>String field on the signature request record</description>
    <label>Related Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>