force-app/main/default/objects/HelloSign__HelloSign_Signature_Request__c/fields/HelloSign__Remaining_Signers__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Remaining_Signers__c</fullName>
    <description>Number field on the signature request record. Stores the number of signers remaining to sign the document.</description>
    <formula>HelloSign__Total_Signers__c - HelloSign__Completed_Signers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Signers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>