force-app/main/default/objects/HelloSign__HelloSign_Signature_Request__c/fields/HelloSign__Signature_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Signature_Request_ID__c</fullName>
    <description>String field on the signature request record</description>
    <externalId>true</externalId>
    <label>Signature Request ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>