force-app/main/default/objects/HelloSign__HelloSign_Signature_Request__c/fields/HelloSign__Template__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>String field on the signature request record. Stores the related template used to create the signature request.</description>
    <label>Dropbox Sign Template</label>
    <referenceTo>HelloSign__Template__c</referenceTo>
    <relationshipLabel>Dropbox Sign Signature Requests</relationshipLabel>
    <relationshipName>HelloSign_Signature_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>