force-app/main/default/objects/HelloSign__HelloSign_Signature_Request__c/fields/HelloSign__Total_Signers__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Total_Signers__c</fullName>
    <description>Number field on the signature request record. Stores the total number of signer roles that are used in the sent request</description>
    <label>Total Signers</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>