force-app/main/default/objects/HelloSign__HelloSign_Signature_Request__c/fields/HelloSign__Writeback_Fields__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Writeback_Fields__c</fullName>
    <description>String field on the signature request record. Store the merge fields that are writeback enabled in the template.</description>
    <label>Writeback Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>