force-app/main/default/objects/HelloSign__HelloSign_Signature_Request__c/fields/Talc__c.field-meta.xml
<CustomField>
    <fullName>Talc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Talc</label>
    <referenceTo>Talc__c</referenceTo>
    <relationshipLabel>Dropbox Sign Signature Requests</relationshipLabel>
    <relationshipName>Dropbox_Sign_Signature_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>