force-app/main/default/objects/HelloSign__HelloSign_Signature_Request__c/listViews/HelloSign__All.listView-meta.xml
<ListView>
    <fullName>HelloSign__All</fullName>
    <columns>NAME</columns>
    <columns>HelloSign__Document_Name__c</columns>
    <columns>HelloSign__Template__c</columns>
    <columns>HelloSign__Latest_Action__c</columns>
    <columns>HelloSign__Total_Signers__c</columns>
    <columns>HelloSign__Completed_Signers__c</columns>
    <columns>HelloSign__Remaining_Signers__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>HelloSign__Message2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>